--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
                         <div class="col-lg-6 mb-4">
                             <div class="row g-2">
                                 <div class="col-6">
-                                    <img src="images/Centuria Connect140/Connect140 (7).jpg" class="img-fluid" alt="Centuria Connect140 event">
+                                    <img src="images/Centuria Connect140/Connect140 (7).JPG" class="img-fluid" alt="Centuria Connect140 event">
                                 </div>
                                 <div class="col-6">
                                     <img src="images/BloomnDisplays/Displays (2).png" class="img-fluid" alt="Bloom'n Creative floral display">
