--- a/events.html
+++ b/events.html
@@ -85,13 +85,13 @@
                                     <img src="images/Centuria Connect140/Connect140 (1).jpg" class="img-fluid event-image" alt="Corporate networking event setup">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/Centuria Connect140/Connect140 (2).jpg" class="img-fluid event-image" alt="Brand activation at business event">
+                                    <img src="images/Centuria Connect140/Connect140 (2).JPG" class="img-fluid event-image" alt="Brand activation at business event">
                                 </div>
                                 <div class="col-6">
                                     <img src="images/Centuria Connect140/Connect140 (3).jpg" class="img-fluid event-image" alt="Conference setup with floral arrangements">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/Centuria Connect140/Connect140 (4).jpg" class="img-fluid event-image" alt="Product launch event with Bloom'n decor">
+                                    <img src="images/Centuria Connect140/Connect140 (4).JPG" class="img-fluid event-image" alt="Product launch event with Bloom'n decor">
                                 </div>
                                 <div class="col-6">
                                     <img src="images/Centuria Connect140/Connect140 (10).JPG" class="img-fluid event-image" alt="Corporate event with Hawaiian theme">
