--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                              alt="International food festival event">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/Centuria Connect140/Connect140 (10).jpg" 
+                        <img src="images/Centuria Connect140/Connect140 (10).JPG" 
                              class="d-block w-100" 
                              alt="Corporate networking event setup">
                     </div>
