--- a/team.html
+++ b/team.html
@@ -61,7 +61,7 @@
                     <div class="col-12 col-lg-6 mb-4">
                         <div class="card team-card director-card shadow h-100 team-card-shadow">
                             <div class="director-image-container">
-                                <img src="images/Team/Tamara.jpg" class="director-image" alt="Tamara de Lange - CEO & Founder">
+                                <img src="images/Team/Tamara.JPG" class="director-image" alt="Tamara de Lange - CEO & Founder">
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title director-name">Tamara de Lange (nee Lilly)</h3>
