--- a/gallery.html
+++ b/gallery.html
@@ -75,7 +75,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="images/Centuria Connect140/Connect140 (2).jpg" class="d-block w-100" alt="Centuria Connect140 Stage View">
+                                <img src="images/Centuria Connect140/Connect140 (2).JPG" class="d-block w-100" alt="Centuria Connect140 Stage View">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Centuria Connect140 Stage View</h5>
                                 </div>
@@ -87,7 +87,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="images/Centuria Connect140/Connect140 (4).jpg" class="d-block w-100" alt="Centuria Connect140 Guest Interaction">
+                                <img src="images/Centuria Connect140/Connect140 (4).JPG" class="d-block w-100" alt="Centuria Connect140 Guest Interaction">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Centuria Connect140 Guest Interaction</h5>
                                 </div>
@@ -99,7 +99,7 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="images/Centuria Connect140/Connect140 (6).jpg" class="d-block w-100" alt="Centuria Connect140 Evening Atmosphere">
+                                <img src="images/Centuria Connect140/Connect140 (6).JPG" class="d-block w-100" alt="Centuria Connect140 Evening Atmosphere">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Centuria Connect140 Evening Atmosphere</h5>
                                 </div>
