--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
                                 <img src="images/Testimonials/testimonial-1.png" 
                                      alt="Hawaiian" 
                                      class="testimonial-img testimonial-img-rectangular mb-4">
-                                <h3 class="testimonial-name">Sarah Moore</h3>
-                                <p class="testimonial-position mb-3">Portfolio Marketing Manager, Hawaiian</p>
+                                <h3 class="testimonial-name">Nicolette Adams</h3>
+                                <p class="testimonial-position mb-3">Marketing Executive, Suburban Shopping Centres, Hawaiian</p>
                                 <div class="testimonial-content p-4 rounded">
-                                    <p class="mb-0">"Bloom'n Events Co transformed our corporate gala into an unforgettable experience. Their attention to detail and creative vision exceeded all our expectations."</p>
+                                    <p class="mb-0">"Wanted to say a big thanks for livening up the centre with your curated school holiday activation - I loved it. Keen to work on more in the future together."</p>
                                 </div>
                             </div>
                         </div>
@@ -177,19 +177,19 @@
                                 <h3 class="testimonial-name">Val Neal</h3>
                                 <p class="testimonial-position mb-3">Customer Service Manager, One Forty St Georges</p>
                                 <div class="testimonial-content p-4 rounded">
-                                    <p class="mb-0">"The workshop series was engaging and perfectly tailored to our team's needs. We've seen a noticeable improvement in collaboration since working with Bloom'n."</p>
+                                    <p class="mb-0">"We couldn't  have done it without you.                  Everyone loved the concept. "</p>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item text-center">
                             <div class="testimonial-item">
                                 <img src="images/Testimonials/testimonial-3.jpg" 
-                                     alt="Emma Rodriguez" 
+                                     alt="Shane Di Lello" 
                                      class="testimonial-img testimonial-img-rectangular mb-4">
-                                <h3 class="testimonial-name">Emma Rodriguez</h3>
-                                <p class="testimonial-position mb-3">Event Coordinator, City Arts Council</p>
+                                <h3 class="testimonial-name">Shane Di Lello</h3>
+                                <p class="testimonial-position mb-3">Property Manager, Hawaiian Melville</p>
                                 <div class="testimonial-content p-4 rounded">
-                                    <p class="mb-0">"Their floral displays stopped everyone in their tracks. We've never received so many compliments on an event's decor before!"</p>
+                                    <p class="mb-0">"The school holiday activation in Melville has been located inside, alongside Cuckoo’s Nest, capturing footfall, supporting retailers, and providing theatre in the centre. Super cute 😊"</p>
                                 </div>
                             </div>
                         </div>
