--- a/index.html
+++ b/index.html
@@ -345,11 +345,11 @@
                     <p class="text-light small">Let's discuss how we can make your next event unforgettable</p>
                     <a href="contact.html" class="btn btn-gold">Get in Touch</a>
                     <div class="d-flex flex-row justify-content-center gap-3 social-links social-spacing">
-                        <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook"><i class="bi bi-facebook"></i></a>
-                        <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram"><i class="bi bi-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn"><i class="bi bi-linkedin"></i></a>
-                        <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest"><i class="bi bi-pinterest"></i></a>
-                        <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok"><i class="bi bi-tiktok"></i></a>
+                                            <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
+                    <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
                         </div>
                     <p class="text-gold fw-light small mb-0">
                         Copyright &copy; 2024 Bloom'n Events Co Pty Ltd. All rights reserved.
