--- a/about.html
+++ b/about.html
@@ -225,7 +225,7 @@
                             <img src="images/BloomnClientLogos/Floreat Forum Logo.jpg" alt="Floreat Forum" class="client-logo-img">
                         </div>
                         <div class="client-logo">
-                            <img src="images/BloomnClientLogos/cockburn gateway shopping city.png" alt="Cockburn Gateway Shopping City" class="client-logo-img">
+                            <img src="images/BloomnClientLogos/stockland-logo.png" alt="Stockland" class="client-logo-img">
                         </div>
                     </div>
                 </div>
