Wording and image update

--- a/404.html
+++ b/404.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found | Bloom'n Events Co</title>
-    <meta name="description" content="Sorry, the page you're looking for doesn't exist. Explore our event planning services, floral displays, and corporate events. Return to Bloom'n Events Co homepage.">
+    <meta name="description" content="Sorry, the page you're looking for doesn't exist. Explore our event planning services, displays, and corporate events. Return to Bloom'n Events Co homepage.">
     
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Page Not Found | Bloom'n Events Co">
-    <meta property="og:description" content="Sorry, the page you're looking for doesn't exist. Explore our event planning services, floral displays, and corporate events.">
+    <meta property="og:description" content="Sorry, the page you're looking for doesn't exist. Explore our event planning services, displays, and corporate events.">
     <meta property="og:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
     <meta property="og:url" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/404.html">
     <meta property="og:type" content="website">
@@ -187,7 +187,7 @@
                                         <div class="p-3 border rounded h-100 hover-shadow">
                                             <i class="bi bi-flower1 text-gold fs-2 mb-2"></i>
                                             <h6 class="mb-1">Displays</h6>
-                                            <small class="text-muted">Floral & Custom</small>
+                                            <small class="text-muted">Custom</small>
                                         </div>
                                     </a>
                                 </div>
