--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
                             Bloom'n Events Co. began in 2018 under the original name The Ridge Retreat & Health Gardens, delivering creative, nature-based workshops for children, teens, and adults.
                         </p>
                                 <p>
-                                    We've worked across Perth, from Midland Gate's Fresh Food Precinct to seasonal activations at Belmont Forum and Stockland Baldivis. One highlight was the 12-day "Reuse, Repurpose, Recycle" programme, drawing families back with rotating sustainability activities. Post-COVID, we've re-emerged more focused and driven—ready to transform WA spaces through connection, creativity, and community.
+                                    We've worked across Perth, from Midland Gate's Fresh Food Precinct to seasonal activations at Belmont Forum, Stockland Baldivis and City of Swan's Avon Descent Festival. One highlight was the 12-day "Reuse, Repurpose, Recycle" programme, drawing families back with rotating sustainability activities. Post-COVID, we've re-emerged more focused and driven—ready to transform WA spaces through connection, creativity, and community.
                         </p>
                     </div>
                         </div>
@@ -180,7 +180,7 @@
                             Bloom'n Events Co. is a passionate and experienced team delivering engaging event activations across WA. Our work blends wild crafts, art, gardening, food, and sustainability into accessible experiences for people of all ages.
                         </p>
                                 <p>
-                            With over 40 years of combined experience in retail management, leasing, agribusiness, and placemaking, we know how to bring energy and community to even the most underused spaces. We're proud collaborators, customising every event to reflect local needs and values.
+                            With over 40 years of combined experience in retail management, casual leasing, agribusiness, placemaking and local Government, we know how to bring energy and community to even the most underused spaces. We're proud collaborators, customising every event to reflect local needs and values.
                         </p>
                     </div>
                         </div>
@@ -209,26 +209,7 @@
                     </div>
                 </div>
                 
-                <!-- Client Logos Section -->
-                <div class="client-logos-section mt-4">
-                    <div class="client-logos-container">
-                        <div class="client-logo">
-                            <img src="images/BloomnClientLogos/thumbnail_One Forty St Georges - Logo - Black.png" alt="One Forty St Georges" class="client-logo-img">
-                        </div>
-                        <div class="client-logo">
-                            <img src="images/BloomnClientLogos/thumbnail_CENT002-Centuria-Black.png" alt="Centuria" class="client-logo-img">
-                        </div>
-                        <div class="client-logo">
-                            <img src="images/BloomnClientLogos/Hawaiian-Colour-Log1.png" alt="Hawaiian" class="client-logo-img">
-                        </div>
-                        <div class="client-logo">
-                            <img src="images/BloomnClientLogos/Floreat Forum Logo.jpg" alt="Floreat Forum" class="client-logo-img">
-                        </div>
-                        <div class="client-logo">
-                            <img src="images/BloomnClientLogos/stockland-logo.png" alt="Stockland" class="client-logo-img">
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </section>
 
@@ -240,10 +221,10 @@
                         <div class="col-lg-6 mb-4">
                             <div class="about-content">
                                 <p class="lead">
-                            Bloom'n Creative Design Co. is the next chapter—Western Australia's boutique design studio for eye-catching displays and immersive floral installations.
+                            Bloom'n Creative Design Co. is the next chapter—Western Australia's boutique design studio for eye-catching displays and immersive installations.
                         </p>
                                 <p>
-                            Our work spans corporate launches, festivals, weddings, and retail displays. From our Wheatbelt studio, we design and construct large-scale, reusable floral sets and custom props—engineered for visual impact, sustainability, and transportability. We deliver installations that inspire joy and elevate spaces.
+                            Our work spans corporate launches, festivals, weddings, and retail displays. From our Wheatbelt studio, we design and construct large-scale, reusable sets and custom props—engineered for visual impact, sustainability, and transportability. We deliver installations that inspire joy and elevate spaces.
                         </p>
                     </div>
                         </div>
@@ -253,19 +234,19 @@
                                     <img src="images/Centuria Connect140/Connect140 (7).JPG" class="img-fluid" alt="Centuria Connect140 event">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/BloomnDisplays/Displays (2).png" class="img-fluid" alt="Bloom'n Creative floral display">
+                                    <img src="images/BloomnDisplays/Displays (2).png" class="img-fluid" alt="Bloom'n Creative display">
                                 </div>
                                 <div class="col-6">
                                     <img src="images/Centuria Connect140/Connect140 (8).JPG" class="img-fluid" alt="Centuria Connect140 event">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/BloomnDisplays/Displays (3).png" class="img-fluid" alt="Bloom'n Creative floral display">
+                                    <img src="images/BloomnDisplays/Displays (3).png" class="img-fluid" alt="Bloom'n Creative display">
                                 </div>
                                 <div class="col-6">
                                     <img src="images/Centuria Connect140/Connect140 (9).JPG" class="img-fluid" alt="Centuria Connect140 event">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/BloomnDisplays/Displays (4).png" class="img-fluid" alt="Bloom'n Creative floral display">
+                                    <img src="images/BloomnDisplays/Displays (4).png" class="img-fluid" alt="Bloom'n Creative display">
                                 </div>
                             </div>
                         </div>
