--- a/events.html
+++ b/events.html
@@ -152,7 +152,7 @@
                                     <img src="images/Centuria Connect140/Connect140 (2).JPG" class="img-fluid event-image" alt="Brand activation at business event" loading="lazy" decoding="async">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/Centuria Connect140/Connect140 (3).jpg" class="img-fluid event-image" alt="Conference setup with floral arrangements" loading="lazy" decoding="async">
+                                    <img src="images/Centuria Connect140/Connect140 (3).jpg" class="img-fluid event-image" alt="Conference setup with arrangements" loading="lazy" decoding="async">
                                 </div>
                                 <div class="col-6">
                                     <img src="images/Centuria Connect140/Connect140 (4).JPG" class="img-fluid event-image" alt="Product launch event with Bloom'n decor" loading="lazy" decoding="async">
