--- a/gallery.html
+++ b/gallery.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - Bloom'n Events Co</title>
-    <meta name="description" content="View our event portfolio: corporate events, creative workshops, floral displays, and more. See examples of Bloom'n Events Co's work across Perth and Western Australia.">
+    <meta name="description" content="View our event portfolio: corporate events, creative workshops, displays, and more. See examples of Bloom'n Events Co's work across Perth and Western Australia.">
     
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Gallery | Bloom'n Events Co">
-    <meta property="og:description" content="View our event portfolio: corporate events, creative workshops, floral displays, and more. See examples of Bloom'n Events Co's work across Perth and Western Australia.">
+    <meta property="og:description" content="View our event portfolio: corporate events, creative workshops, displays, and more. See examples of Bloom'n Events Co's work across Perth and Western Australia.">
     <meta property="og:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
     <meta property="og:url" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/gallery.html">
     <meta property="og:type" content="website">
@@ -18,7 +18,7 @@
     <!-- Twitter Card tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Gallery | Bloom'n Events Co">
-    <meta name="twitter:description" content="View our event portfolio: corporate events, creative workshops, floral displays, and more. See examples of Bloom'n Events Co's work.">
+    <meta name="twitter:description" content="View our event portfolio: corporate events, creative workshops, displays, and more. See examples of Bloom'n Events Co's work.">
     <meta name="twitter:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
     
     <!-- Performance Optimization: Resource Hints -->
@@ -145,9 +145,9 @@
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="images/Centuria Connect140/Connect140 (3).jpg" class="d-block w-100" alt="Centuria Connect140 Floral Arrangements" loading="lazy" decoding="async">
+                                <img src="images/Centuria Connect140/Connect140 (3).jpg" class="d-block w-100" alt="Centuria Connect140 Arrangements" loading="lazy" decoding="async">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Centuria Connect140 Floral Arrangements</h5>
+                                    <h5>Centuria Connect140 Arrangements</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
@@ -267,9 +267,9 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="images/BloomnDisplays/Displays (10).png" class="d-block w-100" alt="Bloom'n Displays - Floral Installation" loading="lazy" decoding="async">
+                                <img src="images/BloomnDisplays/Displays (10).png" class="d-block w-100" alt="Bloom'n Displays - Installation" loading="lazy" decoding="async">
                                 <div class="carousel-caption d-none d-md-block">
-                                    <h5>Bloom'n Displays - Floral Installation</h5>
+                                    <h5>Bloom'n Displays - Installation</h5>
                                 </div>
                             </div>
                             <div class="carousel-item">
