--- a/workshops.html
+++ b/workshops.html
@@ -191,6 +191,7 @@
                                         <li>Mandala Nature Art</li>
                                         <li>Flower Seed Ball Bomb</li>
                                         <li>Upcycled Herb Tea Cup & Saucer</li>
+                                        <li>Plus Other Customised Workshops</li>
                                     </ul>
                                 </div>
                             </div>
@@ -262,6 +263,7 @@
                                         <li>Upcycled Herb Tea Cup & Saucer</li>
                                         <li>Upcycled Bottle Head Planter</li>
                                         <li>Silhouette Canvas Art</li>
+                                        <li>Plus Other Customised Workshops</li>
                                     </ul>
                                 </div>
                             </div>
