--- a/workshops.html
+++ b/workshops.html
@@ -139,7 +139,7 @@
                                 <b>Bloom'n Events Co.</b> kids workshops are vibrant, hands-on experiences designed to spark curiosity and creativity. From single-day activations to full school holiday programmes, we cover engaging themes like nature art, sustainability, and creative learning.
                             </p>
                             <p class="text-charcoal">
-                                Every workshop is fun, educational, and fully customisable to match your event, season, or theme—guaranteeing memorable moments that kids (and parents) will love.
+                                Every workshop is fun, educational, and fully customisable to match your event, season, or theme — guaranteeing memorable moments that kids (and parents) will love and guaranteeing you as our client can relax.
                             </p>
                             
                             
