--- a/contact.html
+++ b/contact.html
@@ -157,7 +157,7 @@
                             <div class="heading-blush-bg text-center">
                                 <h1 id="contactHeading" class="display-4 content-heading-large">Contact Details</h1>
                             </div>
-                            <div class="spacer-lg"></div>
+                            <div style="height: 90px;"></div>
                                 <div class="card contact-details-card pt-6 mb-6">
                                     <div class="card-body">
                                     <p class="text-start">For any inquiries, please contact us at:</p>
@@ -170,7 +170,6 @@
                                     <p class="text-start">We look forward to hearing from you!</p>
                                 </div>
                             </div>
-                            <div class="spacer-lg"></div>
                             <!-- Google Map Section -->
                             <div class="map-container">
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d1684.973784719488!2d117.00761987344426!3d-32.36695202069329!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1755314696277!5m2!1sen!2sus" width="100%" height="150" style="border:0; border-radius: 15px; border: 2px solid var(--coreGold);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"> title="Bloom'n Events Co Location - Brookton, WA">
