Contact page adjust

--- a/index.html
+++ b/index.html
@@ -480,9 +480,9 @@
                         <p>Hello! I'm here to help you with your event planning needs. What would you like to know about our services?</p>
                         <div class="chatbot-quick-replies">
                             <button class="chatbot-quick-reply" data-message="Tell me about your event planning services">Event Planning</button>
-                            <button class="chatbot-quick-reply" data-message="What workshops do you offer?">Workshops</button>
-                            <button class="chatbot-quick-reply" data-message="Show me your displays">Displays</button>
-                            <button class="chatbot-quick-reply" data-message="How can I contact you?">Contact Info</button>
+                            <button class="chatbot-quick-reply" data-message="What workshops do you offer?" data-action="navigate:workshops.html">View Workshops</button>
+                            <button class="chatbot-quick-reply" data-message="Show me your displays" data-action="navigate:displays.html">View Displays</button>
+                            <button class="chatbot-quick-reply" data-message="How can I contact you?" data-action="navigate:contact.html">Contact Us</button>
                         </div>
                     </div>
                 </div>
