--- a/contact.html
+++ b/contact.html
@@ -158,7 +158,7 @@
                                 <h1 id="contactHeading" class="display-4 content-heading-large">Contact Details</h1>
                             </div>
                             <div style="height: 90px;"></div>
-                                <div class="card contact-details-card pt-6 mb-6">
+                                <div class="card contact-details-card mb-6">
                                     <div class="card-body">
                                     <p class="text-start">For any inquiries, please contact us at:</p>
                                     <ul class="list-unstyled">  
