--- a/team.html
+++ b/team.html
@@ -141,7 +141,7 @@
                     <div class="col-12 col-lg-6 mb-4">
                         <div class="card team-card director-card shadow h-100 team-card-shadow">
                             <div class="director-image-container">
-                                <img src="images/Team/Anton.PNG" class="director-image" alt="Anton de Lange - COO & Co-Founder" loading="lazy" decoding="async">
+                                <img src="images/Team/Anton.jpg" class="director-image" alt="Anton de Lange - COO & Co-Founder" loading="lazy" decoding="async">
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title director-name">Anton de Lange</h3>
