--- a/about.html
+++ b/about.html
@@ -61,16 +61,13 @@
     </script>
     <style>
         /* Scoped to About page hero only */
-        .about-hero-wrap { position: relative; border: 2px solid var(--coreGold); border-radius: 15px; overflow: visible; }
+        .about-hero-wrap { position: relative; border: 2px solid var(--coreGold); border-radius: 15px; overflow: hidden; }
         .about-hero-overlay { position: relative; }
         .about-hero-video {
             position: absolute;
-            top: 50%; left: 50%; transform: translate(-50%, -50%);
-            width: 100vw; min-height: 100%; height: auto;
-            object-fit: cover; z-index: -1;
-        }
-        @media (max-width: 575.98px) {
-            .about-hero-video { width: 120vw; }
+            inset: 0;
+            width: 100%; height: 100%;
+            object-fit: cover; z-index: -1; border-radius: 15px;
         }
     </style>
 </head>
@@ -121,7 +118,7 @@
         <!-- HERO VIDEO SECTION -->
         <section class="section-hero" aria-labelledby="aboutHeroHeading" style="position: relative; overflow: hidden;">
             <div class="container px-0">
-                <div class="about-hero-wrap" style="position: relative; border: 2px solid var(--coreGold); border-radius: 15px; overflow: visible;">
+                <div class="about-hero-wrap" style="position: relative; border: 2px solid var(--coreGold); border-radius: 15px; overflow: hidden;">
                     <video class="about-hero-video" autoplay muted loop playsinline preload="metadata" poster="images/logo-wht.png" style="display:block;">
                         <source src="images/bloomn-hero.mp4" type="video/mp4">
                         Your browser does not support the video tag.
