--- a/index.html
+++ b/index.html
@@ -325,8 +325,7 @@
                                 <h3 class="card-title">Facebook</h3>
                                 <p>Follow us for event updates and behind-the-scenes</p>
                                 <a href="https://www.facebook.com/bloomneventsco/" 
-                                class="btn btn-gold"
-                                target="_blank" rel="noopener noreferrer">Visit Our Page</a>
+                                class="btn btn-gold" target="_blank" rel="noopener noreferrer">Visit Our Page</a>
                             </div>
                         </div>
                     </div>
@@ -339,8 +338,7 @@
                                 <h3 class="card-title">Instagram</h3>
                                 <p>See our latest event photos and stories</p>
                                 <a href="https://www.instagram.com/bloomneventsco/" 
-                                class="btn btn-gold"
-                                target="_blank" rel="noopener noreferrer">Follow Us</a>
+                                class="btn btn-gold" target="_blank" rel="noopener noreferrer">Follow Us</a>
                             </div>
                         </div>
                     </div>
@@ -469,11 +467,11 @@
                     <p class="text-light small">Let's discuss how we can make your next event unforgettable</p>
                     <a href="contact.html" class="btn btn-gold">Get in Touch</a>
                     <div class="d-flex flex-row justify-content-center gap-3 social-links social-spacing">
-                                            <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
-                    <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
-                    <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
-                    <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
+                                            <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" target="_blank" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
+                    <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" target="_blank" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
                         </div>
                     <p class="text-gold fw-light small mb-0">
                         Copyright &copy; 2024 Bloom'n Events Co Pty Ltd. All rights reserved.
