--- a/index.html
+++ b/index.html
@@ -317,15 +317,14 @@
             <div class="container">
                 <h2 id="socialMediaHeading" class="text-gold heading-blush-bg content-heading-large text-center">Find Us On Social Media</h2>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 g-4 justify-content-center">
-                    <!-- Facebook Post -->
+                    <!-- Facebook Embed -->
                     <div class="col">
                         <div class="card h-100 shadow social-card">
-                            <div class="card-body d-flex flex-column justify-content-center align-items-center p-4">
-                                <i class="bi bi-facebook text-gold fs-1 mb-3"></i>
-                                <h3 class="card-title">Facebook</h3>
-                                <p>Follow us for event updates and behind-the-scenes</p>
-                                <a href="https://www.facebook.com/bloomneventsco/" 
-                                class="btn btn-gold" target="_blank" rel="noopener noreferrer">Visit Our Page</a>
+                            <div class="card-body p-3">
+                                <div id="fb-root"></div>
+                                <div class="fb-page" data-href="https://www.facebook.com/bloomneventsco/" data-tabs="timeline" data-width="500" data-height="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                                    <blockquote cite="https://www.facebook.com/bloomneventsco/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/bloomneventsco/">Bloom'n Events Co</a></blockquote>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -537,6 +536,9 @@
             </div>
         </div>
     </div>
+
+    <!-- Facebook SDK for JavaScript -->
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="bloomn"></script>
 
     <!-- Optimized JavaScript Loading -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
