Add GitHub Action + script to prebuild IG/LinkedIn feeds; hydrate IG grid; embed FB timeline

--- a/index.html
+++ b/index.html
@@ -329,10 +329,10 @@
                         </div>
                     </div>
                     
-                    <!-- Instagram Post -->
+                    <!-- Instagram Grid (hydrated from data/social_feeds.json if available) -->
                     <div class="col">
                         <div class="card h-100 shadow social-card">
-                            <div class="card-body d-flex flex-column justify-content-center align-items-center p-4">
+                            <div class="card-body d-flex flex-column justify-content-center align-items-center p-4" data-ig-card>
                                 <i class="bi bi-instagram text-gold fs-1 mb-3"></i>
                                 <h3 class="card-title">Instagram</h3>
                                 <p>See our latest event photos and stories</p>
