--- a/index.html
+++ b/index.html
@@ -329,15 +329,11 @@
                         </div>
                     </div>
                     
-                    <!-- Instagram Grid (hydrated from data/social_feeds.json if available) -->
+                    <!-- Instagram Feed (SociableKIT) -->
                     <div class="col">
                         <div class="card h-100 shadow social-card">
-                            <div class="card-body d-flex flex-column justify-content-center align-items-center p-4" data-ig-card>
-                                <i class="bi bi-instagram text-gold fs-1 mb-3"></i>
-                                <h3 class="card-title">Instagram</h3>
-                                <p>See our latest event photos and stories</p>
-                                <a href="https://www.instagram.com/bloomneventsco/" 
-                                class="btn btn-gold" target="_blank" rel="noopener noreferrer">Follow Us</a>
+                            <div class="card-body p-3">
+                                <div class='sk-instagram-feed' data-embed-id='25613579'></div>
                             </div>
                         </div>
                     </div>
@@ -539,6 +535,8 @@
 
     <!-- Facebook SDK for JavaScript -->
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="bloomn"></script>
+    <!-- SociableKIT Instagram Feed -->
+    <script src='https://widgets.sociablekit.com/instagram-feed/widget.js' defer></script>
 
     <!-- Optimized JavaScript Loading -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
