--- a/index.html
+++ b/index.html
@@ -338,15 +338,11 @@
                         </div>
                     </div>
                     
-                    <!-- LinkedIn Post -->
+                    <!-- LinkedIn Feed (SociableKIT) -->
                     <div class="col">
                         <div class="card h-100 shadow social-card">
-                            <div class="card-body d-flex flex-column justify-content-center align-items-center p-4">
-                                <i class="bi bi-linkedin text-gold fs-1 mb-3"></i>
-                                <h3 class="card-title">LinkedIn</h3>
-                                <p>Connect with our CEO professionally</p>
-                                <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/"                                    class="btn btn-gold"
-                                target="_blank" rel="noopener noreferrer">Connect</a>
+                            <div class="card-body p-3">
+                                <div class='sk-ww-linkedin-profile-post' data-embed-id='25613823'></div>
                             </div>
                         </div>
                     </div>
@@ -537,6 +533,8 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="bloomn"></script>
     <!-- SociableKIT Instagram Feed -->
     <script src='https://widgets.sociablekit.com/instagram-feed/widget.js' defer></script>
+    <!-- SociableKIT LinkedIn Posts -->
+    <script src='https://widgets.sociablekit.com/linkedin-profile-posts/widget.js' defer></script>
 
     <!-- Optimized JavaScript Loading -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
