--- a/index.html
+++ b/index.html
@@ -529,12 +529,7 @@
         </div>
     </div>
 
-    <!-- Facebook SDK for JavaScript -->
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v18.0" nonce="bloomn"></script>
-    <!-- SociableKIT Instagram Feed -->
-    <script src='https://widgets.sociablekit.com/instagram-feed/widget.js' defer></script>
-    <!-- SociableKIT LinkedIn Posts -->
-    <script src='https://widgets.sociablekit.com/linkedin-profile-posts/widget.js' defer></script>
+    <!-- Social widgets are lazy-loaded when the section enters view -->
 
     <!-- Optimized JavaScript Loading -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
