Add pre-footer CTA section on home page with heading and contact button

--- a/index.html
+++ b/index.html
@@ -312,6 +312,22 @@
             <img src="images/logo-wht.png" alt="Bloom'n Events Co" class="carousel-logo-overlay" loading="eager" decoding="async">
         </section>
 
+        <!-- PRE-FOOTER CTA -->
+        <section class="section-main" aria-labelledby="preFooterCtaHeading">
+            <div class="container">
+                <div class="heading-blush-bg text-center">
+                    <h2 id="preFooterCtaHeading" class="display-4 content-heading-large">Let’s Create Something Amazing Together</h2>
+                </div>
+                <p class="lead text-center">
+                    From corporate activations and community festivals to hands-on workshops and custom displays,
+                    we design memorable experiences across Western Australia.
+                </p>
+                <div class="text-center mt-3">
+                    <a href="contact.html" class="btn btn-gold">Start Your Project</a>
+                </div>
+            </div>
+        </section>
+
         <!-- SOCIAL MEDIA SECTION -->
         <section class="section-main" aria-labelledby="socialMediaHeading">
             <div class="container">
