Update pre-footer section text to Acknowledgement of Country wording

--- a/index.html
+++ b/index.html
@@ -418,14 +418,7 @@
         <section class="section-main" aria-labelledby="preFooterCtaHeading">
             <div class="container">
                 <div class="heading-blush-bg text-center">
-                    <h2 id="preFooterCtaHeading" class="display-4 content-heading-large">Let’s Create Something Amazing Together</h2>
-                </div>
-                <p class="lead text-center">
-                    From corporate activations and community festivals to hands-on workshops and custom displays,
-                    we design memorable experiences across Western Australia.
-                </p>
-                <div class="text-center mt-3">
-                    <a href="contact.html" class="btn btn-gold">Start Your Project</a>
+                    <h2 id="preFooterCtaHeading" class="display-4 content-heading-large">Bloom'n Events Co Pty Ltd acknowledges the Traditional Owners and Custodians of Country throughout Australia — and their continuing connection to land, water, and community. We pay our respects to Elders both past and present, and we extend that respect to all First Nations people.</h2>
                 </div>
             </div>
         </section>
