--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <section class="section-main" aria-labelledby="preFooterCtaHeading">
             <div class="container">
                 <div class="heading-blush-bg text-center">
-                    <h2 id="preFooterCtaHeading" class="display-4 content-heading-large">Bloom'n Events Co Pty Ltd acknowledges the Traditional Owners and Custodians of Country throughout Australia — and their continuing connection to land, water, and community. We pay our respects to Elders both past and present, and we extend that respect to all First Nations people.</h2>
+                    <p id="preFooterCtaHeading" class="acknowledgement-text mb-0" style="font-size: 50%;">Bloom'n Events Co Pty Ltd acknowledges the Traditional Owners and Custodians of Country throughout Australia — and their continuing connection to land, water, and community. We pay our respects to Elders both past and present, and we extend that respect to all First Nations people.</p>
                 </div>
             </div>
         </section>
