Update acknowledgement wording to Noongar-focused statement

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <section class="section-main" aria-labelledby="preFooterCtaHeading">
             <div class="container">
                 <div class="heading-blush-bg text-center">
-                    <p id="preFooterCtaHeading" class="acknowledgement-text mb-0" style="font-size: 100%;">Bloom'n Events Co Pty Ltd acknowledges the Traditional Owners and Custodians of Country throughout Australia — and their continuing connection to land, water, and community. We pay our respects to Elders both past and present, and we extend that respect to all First Nations people.</p>
+                    <p id="preFooterCtaHeading" class="acknowledgement-text mb-0" style="font-size: 100%;">Bloom’n Events Co Pty Ltd acknowledges the Traditional Owners of the lands on which we live and work — the Noongar people — and pays our deepest respects to Elders past and present. We honour their enduring connection to land, waters, and community, and extend that respect to all First Nations peoples across Australia.</p>
                 </div>
             </div>
         </section>
