--- a/index.html
+++ b/index.html
@@ -233,69 +233,69 @@
                         </video>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/Hawaiian World Of Flavours/Hawaian250315-0173.jpg" 
+                        <img src="images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0173.jpg" 
                              class="d-block w-100" 
                              alt="Hawaiian food festival event"
                              loading="lazy"
                              decoding="async"
                              width="1600" height="900"
                              sizes="(max-width: 576px) 100vw, (max-width: 992px) 100vw, 100vw"
-                             srcset="images/Hawaiian World Of Flavours/Hawaian250315-0173-480w.jpg 480w,
-                                     images/Hawaiian World Of Flavours/Hawaian250315-0173-768w.jpg 768w,
-                                     images/Hawaiian World Of Flavours/Hawaian250315-0173-1200w.jpg 1200w,
-                                     images/Hawaiian World Of Flavours/Hawaian250315-0173-1600w.jpg 1600w">
+                             srcset="images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0173-480w.jpg 480w,
+                                     images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0173-768w.jpg 768w,
+                                     images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0173-1200w.jpg 1200w,
+                                     images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0173-1600w.jpg 1600w">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5).jpg" 
+                        <img src="images/Hawaiian%20Neighbourhood%20Nibbles/Neighbourhood-Nibbles%20(5).jpg" 
                              class="d-block w-100" 
                              alt="Community event with food and craft activities"
                              loading="lazy"
                              decoding="async"
                              width="1600" height="900"
                              sizes="(max-width: 576px) 100vw, (max-width: 992px) 100vw, 100vw"
-                             srcset="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5)-480w.jpg 480w,
-                                     images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5)-768w.jpg 768w,
-                                     images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5)-1200w.jpg 1200w,
-                                     images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5)-1600w.jpg 1600w">
+                             srcset="images/Hawaiian%20Neighbourhood%20Nibbles/Neighbourhood-Nibbles%20(5)-480w.jpg 480w,
+                                     images/Hawaiian%20Neighbourhood%20Nibbles/Neighbourhood-Nibbles%20(5)-768w.jpg 768w,
+                                     images/Hawaiian%20Neighbourhood%20Nibbles/Neighbourhood-Nibbles%20(5)-1200w.jpg 1200w,
+                                     images/Hawaiian%20Neighbourhood%20Nibbles/Neighbourhood-Nibbles%20(5)-1600w.jpg 1600w">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/Hawaiian World Of Flavours/Hawaian250315-0421.jpg" 
+                        <img src="images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0421.jpg" 
                              class="d-block w-100" 
                              alt="International food festival event"
                              loading="lazy"
                              decoding="async"
                              width="1600" height="900"
                              sizes="(max-width: 576px) 100vw, (max-width: 992px) 100vw, 100vw"
-                             srcset="images/Hawaiian World Of Flavours/Hawaian250315-0421-480w.jpg 480w,
-                                     images/Hawaiian World Of Flavours/Hawaian250315-0421-768w.jpg 768w,
-                                     images/Hawaiian World Of Flavours/Hawaian250315-0421-1200w.jpg 1200w,
-                                     images/Hawaiian World Of Flavours/Hawaian250315-0421-1600w.jpg 1600w">
+                             srcset="images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0421-480w.jpg 480w,
+                                     images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0421-768w.jpg 768w,
+                                     images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0421-1200w.jpg 1200w,
+                                     images/Hawaiian%20World%20Of%20Flavours/Hawaian250315-0421-1600w.jpg 1600w">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/Centuria Connect140/Connect140 (10).JPG" 
+                        <img src="images/Centuria%20Connect140/Connect140%20(10).JPG" 
                              class="d-block w-100" 
                              alt="Corporate networking event setup"
                              loading="lazy"
                              decoding="async"
                              width="1600" height="900"
                              sizes="(max-width: 576px) 100vw, (max-width: 992px) 100vw, 100vw"
-                             srcset="images/Centuria Connect140/Connect140 (10)-480w.JPG 480w,
-                                     images/Centuria Connect140/Connect140 (10)-768w.JPG 768w,
-                                     images/Centuria Connect140/Connect140 (10)-1200w.JPG 1200w,
-                                     images/Centuria Connect140/Connect140 (10)-1600w.JPG 1600w">
+                             srcset="images/Centuria%20Connect140/Connect140%20(10)-480w.JPG 480w,
+                                     images/Centuria%20Connect140/Connect140%20(10)-768w.JPG 768w,
+                                     images/Centuria%20Connect140/Connect140%20(10)-1200w.JPG 1200w,
+                                     images/Centuria%20Connect140/Connect140%20(10)-1600w.JPG 1600w">
                     </div>
                     <div class="carousel-item">
-                        <img src="images/BloomnDisplays/Displays (10).png" 
+                        <img src="images/BloomnDisplays/Displays%20(10).png" 
                              class="d-block w-100" 
                              alt="Event display setup and decoration"
                              loading="lazy"
                              decoding="async"
                              width="1600" height="900"
                              sizes="(max-width: 576px) 100vw, (max-width: 992px) 100vw, 100vw"
-                             srcset="images/BloomnDisplays/Displays (10)-480w.png 480w,
-                                     images/BloomnDisplays/Displays (10)-768w.png 768w,
-                                     images/BloomnDisplays/Displays (10)-1200w.png 1200w,
-                                     images/BloomnDisplays/Displays (10)-1600w.png 1600w">
+                             srcset="images/BloomnDisplays/Displays%20(10)-480w.png 480w,
+                                     images/BloomnDisplays/Displays%20(10)-768w.png 768w,
+                                     images/BloomnDisplays/Displays%20(10)-1200w.png 1200w,
+                                     images/BloomnDisplays/Displays%20(10)-1600w.png 1600w">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
