Enable WebP auto-injection on pages with local .webp assets via meta flag

--- a/gallery.html
+++ b/gallery.html
@@ -20,6 +20,7 @@
     <meta name="twitter:title" content="Gallery | Bloom'n Events Co">
     <meta name="twitter:description" content="View our event portfolio: corporate events, creative workshops, displays, and more. See examples of Bloom'n Events Co's work.">
     <meta name="twitter:image" content="https://antondelange.github.io/Bloom-n-Events-Co-Website/images/logo-wht.png">
+    <meta name="webp-assets" content="true">
     
     <!-- Performance Optimization: Resource Hints -->
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
