--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Bloom'n Events Co">
     <link rel="manifest" href="manifest.json">
+    <meta name="webp-assets" content="true">
     
     <!-- Performance Optimization: Resource Hints -->
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
