Add new content: Breast Cancer displays to displays page and gallery; Phoenix kids workshops to workshops page and gallery; include Breast Cancer image in home hero carousel with updated indicators

--- a/displays.html
+++ b/displays.html
@@ -144,10 +144,10 @@
                                     <img src="images/BloomnDisplays/Displays (6).png" class="display-image img-fluid" alt="Bloom'n Creative display" loading="lazy" decoding="async">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/BloomnDisplays/Displays (3).png" class="display-image img-fluid" alt="Bloom'n Creative display" loading="lazy" decoding="async">
+                                    <img src="images/Centuria%20Breast%20Cancer/Centuria%20Breast%20Cancer%20Oct25.1.jpg" class="display-image img-fluid" alt="Centuria Breast Cancer display" loading="lazy" decoding="async">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/BloomnDisplays/Displays (9).png" class="display-image img-fluid" alt="Bloom'n Creative display" loading="lazy" decoding="async">
+                                    <img src="images/Centuria%20Breast%20Cancer/Centuria%20Breast%20Cancer%20Oct25.2.jpg" class="display-image img-fluid" alt="Centuria Breast Cancer display" loading="lazy" decoding="async">
                                 </div>
                             </div>
                         </div>
