--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
                     <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
                     <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
                     <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                    <button type="button" data-bs-target="#heroCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -297,6 +298,13 @@
                                      images/BloomnDisplays/Displays%20(10)-768w.png 768w,
                                      images/BloomnDisplays/Displays%20(10)-1200w.png 1200w,
                                      images/BloomnDisplays/Displays%20(10)-1600w.png 1600w">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/Centuria%20Breast%20Cancer/Centuria%20Breast%20Cancer%20Oct25.1.jpg"
+                             class="d-block w-100"
+                             alt="Centuria Breast Cancer Display"
+                             loading="lazy"
+                             decoding="async">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
