--- a/gallery.html
+++ b/gallery.html
@@ -201,6 +201,7 @@
                             <button type="button" data-bs-target="#workshopCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
                             <button type="button" data-bs-target="#workshopCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
                             <button type="button" data-bs-target="#workshopCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                            <button type="button" data-bs-target="#workshopCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -239,6 +240,12 @@
                                     <h5>Workshop Finished Projects</h5>
                                 </div>
                             </div>
+                            <div class="carousel-item">
+                                <img src="images/Pheonix%20SH%20Oct%202025/PheonixTTSOct25.1.JPG" class="d-block w-100" alt="Phoenix Kids Workshop" loading="lazy" decoding="async">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Phoenix Kids Workshop</h5>
+                                </div>
+                            </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#workshopCarousel" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true">‹</span>
@@ -268,6 +275,7 @@
                             <button type="button" data-bs-target="#displaysCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
                             <button type="button" data-bs-target="#displaysCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
                             <button type="button" data-bs-target="#displaysCarousel" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                            <button type="button" data-bs-target="#displaysCarousel" data-bs-slide-to="6" aria-label="Slide 7"></button>
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -304,6 +312,12 @@
                                 <img src="images/BloomnDisplays/Displays%20(6).png" class="d-block w-100" alt="Bloom'n Displays - Custom Props" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 100vw, 100vw" srcset="images/BloomnDisplays/Displays%20(6)-480w.png 480w, images/BloomnDisplays/Displays%20(6)-768w.png 768w, images/BloomnDisplays/Displays%20(6)-1200w.png 1200w, images/BloomnDisplays/Displays%20(6)-1600w.png 1600w">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Bloom'n Displays - Custom Props</h5>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <img src="images/Centuria%20Breast%20Cancer/Centuria%20Breast%20Cancer%20Oct25.1.jpg" class="d-block w-100" alt="Centuria Breast Cancer Display" loading="lazy" decoding="async">
+                                <div class="carousel-caption d-none d-md-block">
+                                    <h5>Centuria Breast Cancer Display</h5>
                                 </div>
                             </div>
                         </div>
