--- a/workshops.html
+++ b/workshops.html
@@ -156,10 +156,10 @@
                                     <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2).jpg" class="workshop-image img-fluid" alt="Kids workshop activities - Hawaiian theme" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 50vw" srcset="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2)-480w.jpg 480w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2)-768w.jpg 768w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2)-1200w.jpg 1200w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2)-1600w.jpg 1600w">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/Hawaiian World Of Flavours/Hawaian250315-0118.jpg" class="workshop-image img-fluid" alt="Kids workshop - Hawaiian World of Flavours" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 50vw" srcset="images/Hawaiian World Of Flavours/Hawaian250315-0118-480w.jpg 480w, images/Hawaiian World Of Flavours/Hawaian250315-0118-768w.jpg 768w, images/Hawaiian World Of Flavours/Hawaian250315-0118-1200w.jpg 1200w, images/Hawaiian World Of Flavours/Hawaian250315-0118-1600w.jpg 1600w">
+                                    <img src="images/Pheonix%20SH%20Oct%202025/PheonixTTSOct25.1.JPG" class="workshop-image img-fluid" alt="Kids workshop - Phoenix school holidays" loading="lazy" decoding="async">
                                 </div>
                                 <div class="col-6">
-                                    <img src="images/KidsWorkshops/kidsworkshops01.jpg" class="workshop-image img-fluid" alt="Kids workshop activities - creative learning" loading="lazy" decoding="async" width="1600" height="900" sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 50vw" srcset="images/KidsWorkshops/kidsworkshops01-480w.jpg 480w, images/KidsWorkshops/kidsworkshops01-768w.jpg 768w, images/KidsWorkshops/kidsworkshops01-1200w.jpg 1200w, images/KidsWorkshops/kidsworkshops01-1600w.jpg 1600w">
+                                    <img src="images/Pheonix%20SH%20Oct%202025/PheonixTTSOct25372.JPG" class="workshop-image img-fluid" alt="Kids workshop activities - Phoenix" loading="lazy" decoding="async">
                                 </div>
                             </div>
                         </div>
