--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             </div>
             
             <!-- Logo Overlay -->
-            <img src="images/logo-wht.png" alt="Bloom'n Events Co" class="carousel-logo-overlay" loading="eager" decoding="async">
+            <div id="logoAnimation" class="carousel-logo-overlay" aria-hidden="true" data-src="animations/BloomnLogoAnimation.json"></div>
         </section>
 
 
