--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             </div>
             
             <!-- Logo Overlay -->
-            <div id="logoAnimation" class="carousel-logo-overlay" aria-hidden="true" data-src="animations/BloomnLogoAnimation.json"></div>
+            <div id="logoAnimation" class="carousel-logo-overlay" aria-hidden="true" data-src="animations/BloomnLogoAnimation.json" data-iframe="animations/BloomnLogoAnimation/index.html"></div>
         </section>
 
 
