Clean up project: remove animated logo, add static logo overlay with rounded corners, remove unused animation files, fix gallery image error handling, remove debug code

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
             </div>
             
             <!-- Logo Overlay -->
-            <div id="logoAnimation" class="carousel-logo-overlay" aria-hidden="true" data-src="animations/BloomnLogoAnimation.json" data-iframe="animations/BloomnLogoAnimation/index.html"></div>
+            <img src="images/logo-wht.png" alt="Bloom'n Events Co" class="carousel-logo-overlay" loading="eager" decoding="async">
         </section>
 
 
