--- a/about.html
+++ b/about.html
@@ -359,6 +359,6 @@
 
     <!-- Optimized JavaScript Loading -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="scripts.js" defer></script>
+    <script src="scripts.js" type="module" defer></script>
 </body>
 </html>
