--- a/tandcs.html
+++ b/tandcs.html
@@ -280,6 +280,6 @@
     </footer>   
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" defer></script>
-    <script src="scripts.js" defer></script>
+    <script src="scripts.js" type="module" defer></script>
 </body>
 </html>
