Fix hero carousel logo overlay rounded corners on mobile
- Add border-radius to inline critical CSS for carousel-logo-overlay
- Add mobile-specific CSS rule to ensure rounded corners on mobile
- Fixes issue where logo overlay appeared square on mobile devices

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         body{margin:0;padding:0;font-family:Montserrat,sans-serif}
         .navbar{min-height:60px}
         .hero-carousel{position:relative;width:100%;height:100vh;min-height:500px}
-        .carousel-logo-overlay{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);z-index:10;max-width:300px;height:auto}
+        .carousel-logo-overlay{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);z-index:10;max-width:300px;height:auto;border-radius:20px;overflow:hidden}
         .carousel-item{height:100vh;min-height:500px}
         .carousel-item img,.carousel-item video{width:100%;height:100%;object-fit:cover}
     </style>
